// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Commentary Column Component > component mounts 1`] = `
"<div class="v-container v-locale--is-ltr">
  <div class="v-row">
    <div class="v-col v-col-4">
      <div class="v-container v-locale--is-ltr">
        <div class="v-row">
          <div class="v-col">
            <!-- eslint-disable-next-line vue/no-v-html -->
            <div></div>
          </div>
        </div>
        <div class="v-row my-4">
          <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-autocomplete v-autocomplete--single" style="width: 200px;">
            <!---->
            <div class="v-input__control">
              <div class="v-field v-field--appended v-field--center-affix v-field--no-label v-field--variant-filled v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="menu" aria-expanded="false" aria-owns="v-menu-2">
                <div class="v-field__overlay"></div>
                <div class="v-field__loader">
                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                    <!---->
                    <div class="v-progress-linear__background" style="opacity: NaN;"></div>
                    <div class="v-progress-linear__buffer" style="opacity: NaN; width: 0%;"></div>
                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <div class="v-field__field" data-no-activator="">
                  <!----><label class="v-label v-field-label" for="input-0">
                    <!---->
                    <!---->
                  </label>
                  <!---->
                  <div class="v-field__input" data-no-activator="">
                    <!---->
                    <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" value="">
                  </div>
                  <!---->
                </div>
                <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
                  <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear "></i></div>
                </transition-stub>
                <div class="v-field__append-inner">
                  <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable v-autocomplete__menu-icon" role="button" aria-hidden="false" tabindex="-1" aria-label="Open" title="Open"></i>
                  <!---->
                </div>
                <div class="v-field__outline">
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <div class="v-input__details">
              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
                <div class="v-messages__message">Read another text</div>
              </transition-group-stub>
              <!---->
            </div>
          </div>
        </div>
        <div class="v-row">
          <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <div class="v-card-title text-body-2 font-weight-bold">Suggested Citation Form</div>
            <div class="v-card-text text-body-2">Herzer, Jens and Paulus Enke, "Commentary on 1 Timothy 1:1/2", in: Corpus Judaeo-Hellenisticum Novi Testamenti digital, [URL: https://cjhnt.saw-leipzig.de/texts/urn:cts:cjhnt:commentary.1tim.001_001_002]</div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
    </div>
    <div class="v-col v-col-8">
      <div class="v-container v-locale--is-ltr">
        <div class="v-row justify-center">
          <div class="v-col v-col-auto pr-0">
            <h1>1,1/2 The Messiah as ἐλπίς</h1>
          </div>
          <div class="v-col v-col-auto pl-0"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-x-small v-btn--variant-plain" aria-haspopup="dialog" aria-expanded="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-copyright mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button>
            <!---->
          </div>
        </div>
        <div class="v-row text-content">
          <div class="v-col">
            <!-- eslint-disable-next-line vue/no-v-html -->
            <!--v-if-->
            <!-- eslint-disable-next-line vue/no-v-html -->
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Commentary Column Component > switches correctly from en to de 1`] = `
"<div class="v-container v-locale--is-ltr">
  <div class="v-row">
    <div class="v-col v-col-4">
      <div class="v-container v-locale--is-ltr">
        <div class="v-row">
          <div class="v-col">
            <!-- eslint-disable-next-line vue/no-v-html -->
            <div></div>
          </div>
        </div>
        <div class="v-row my-4">
          <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-autocomplete v-autocomplete--single" style="width: 200px;">
            <!---->
            <div class="v-input__control">
              <div class="v-field v-field--appended v-field--center-affix v-field--no-label v-field--variant-filled v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="menu" aria-expanded="false" aria-owns="v-menu-2">
                <div class="v-field__overlay"></div>
                <div class="v-field__loader">
                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                    <!---->
                    <div class="v-progress-linear__background" style="opacity: NaN;"></div>
                    <div class="v-progress-linear__buffer" style="opacity: NaN; width: 0%;"></div>
                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <div class="v-field__field" data-no-activator="">
                  <!----><label class="v-label v-field-label" for="input-0">
                    <!---->
                    <!---->
                  </label>
                  <!---->
                  <div class="v-field__input" data-no-activator="">
                    <!---->
                    <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" value="">
                  </div>
                  <!---->
                </div>
                <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
                  <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear "></i></div>
                </transition-stub>
                <div class="v-field__append-inner">
                  <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable v-autocomplete__menu-icon" role="button" aria-hidden="false" tabindex="-1" aria-label="Open" title="Open"></i>
                  <!---->
                </div>
                <div class="v-field__outline">
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <div class="v-input__details">
              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
                <div class="v-messages__message">Einen anderen Text lesen</div>
              </transition-group-stub>
              <!---->
            </div>
          </div>
        </div>
        <div class="v-row">
          <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <div class="v-card-title text-body-2 font-weight-bold">Empfohlene Zitierweise</div>
            <div class="v-card-text text-body-2">Herzer, Jens und Paulus Enke, "Kommentar zu 1. Timotheus 1,1/2", in: Corpus Judaeo-Hellenisticum Novi Testamenti digital, [URL: https://cjhnt.saw-leipzig.de/texts/urn:cts:cjhnt:commentary.1tim.001_001_002]</div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
    </div>
    <div class="v-col v-col-8">
      <div class="v-container v-locale--is-ltr">
        <div class="v-row justify-center">
          <div class="v-col v-col-auto pr-0">
            <h1>1,1/2 Der Messias als ἐλπίς</h1>
          </div>
          <div class="v-col v-col-auto pl-0"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-x-small v-btn--variant-plain" aria-haspopup="dialog" aria-expanded="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-copyright mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button>
            <!---->
          </div>
        </div>
        <div class="v-row text-content">
          <div class="v-col">
            <!-- eslint-disable-next-line vue/no-v-html -->
            <!--v-if-->
            <!-- eslint-disable-next-line vue/no-v-html -->
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
